AX: WAI-ARIA landmarks no longer speak type of landmark on iOS https://bugs.webkit.org/show_bug.cgi?id=114547

Reviewed by David Kilzer.

Source/WebCore:

We want iOS to speak the landmark type.
I've moved the landmark role description to the base Mac class and exposed
these localized strings to iOS (the ones used to return landmark descriptions).

I've also updated the accessibilityLabel to account for landmark type, but also
handle multiple label sources more gracefully by appending commas, which changed a few
tests in minor ways.

Test: platform/iphone-simulator/accessibility/landmark-type.html

* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper accessibilityLabel]):
* accessibility/mac/WebAccessibilityObjectWrapperBase.h:
* accessibility/mac/WebAccessibilityObjectWrapperBase.mm:
(-[WebAccessibilityObjectWrapperBase ariaLandmarkRoleDescription]):
* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper roleDescription]):
* platform/LocalizedStrings.cpp:
(WebCore):
(WebCore::AXButtonActionVerb):
(WebCore::AXRadioButtonActionVerb):
(WebCore::AXTextFieldActionVerb):
(WebCore::AXCheckedCheckBoxActionVerb):
(WebCore::AXUncheckedCheckBoxActionVerb):
(WebCore::AXLinkActionVerb):
(WebCore::AXMenuListPopupActionVerb):
(WebCore::AXMenuListActionVerb):
* platform/LocalizedStrings.h:
(WebCore):

LayoutTests:

* platform/iphone-simulator/accessibility/landmark-type-expected.txt: Added.
* platform/iphone-simulator/accessibility/landmark-type.html: Added.
* platform/iphone-simulator/accessibility/link-with-images-text-expected.txt:
* platform/iphone-simulator/accessibility/link-with-images-text.html:
     Minor change to accomodate trimming of white space.
* platform/iphone-simulator/accessibility/math-expected.txt:
* platform/iphone-simulator/accessibility/math.html:
     Math objects now include "math" as the landmark type.



Canonical link: https://commits.webkit.org/133550@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149051 268f45cc-cd09-0410-ab3c-d52691b4dbfc